# getodd

./: .gitignore  execution_scripts.md  gcp_setup_guide.md  gcp_troubleshooting.md  getodd.py  monitor_dashboard.py  pyproject.toml  requirements.txt  run_gcp.sh  run_scraper.py  setup_gcp.sh  test.csv
getodd_module/: README.md  __init__.py  __main__.py  config.py  main.py  parser.py  processor.py  scraper.py  utils.py
match_urls_complete/: url_cols.md
match_urls_complete/by_league/belgium/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/denmark/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/england/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/france/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/germany/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/italy/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/netherlands/: 2020-2021.csv  2021-2022.csv  2022-2023.csv  2023-2024.csv  2024-2025.csv
match_urls_complete/by_league/norway/: 2020.csv  2021.csv  2022.csv  2023.csv  2024.csv
netherlands_odds_output/: 2020-2021_odds.csv  2021-2022_odds.csv  checkpoint.json  failed_urls.json  processing_log.txt
odds_data_output/: test_odds.csv
sweden_odds_output/: 2020_odds.csv  checkpoint.json  processing_log.txt
(+25 files in other folders)
