[project]
name = "getodd"
version = "1.0.0"
description = "Odds data scraper with parallel processing support"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0.0",
    "pytz>=2023.3",
]

[project.scripts]
getodd = "getodd_module.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]