[project]
name = "getodd"
version = "1.0.0"
description = "Odds data scraper with parallel processing support"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0.0",
    "pytz>=2023.3",
]

[project.scripts]
getodd = "getodd_module.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["getodd_module"]